# clownpeanuts

./: .gitignore  .gitleaks.toml  AGENTS.md  Dockerfile  README.md  TRADEMARK_POLICY.md  docker-compose.yml  pyproject.toml
clownpeanuts/: __init__.py  __main__.py  cli.py
clownpeanuts/agents/: __init__.py  backend.py  runtime.py
clownpeanuts/alerts/: __init__.py  discord.py  email.py  pagerduty.py  router.py  slack.py  syslog.py  webhook.py
clownpeanuts/config/: defaults.yml  loader.py  schema.py
clownpeanuts/core/: csv_safe.py  doctor.py  event_bus.py  logging.py  network.py  orchestrator.py  plugin.py  redis_url.py  safe_fetch.py  session.py  tenant.py
clownpeanuts/dashboard/: __init__.py  api.py  theater.py
clownpeanuts/ecosystem/: __init__.py  activity.py  deployment.py  drift.py  jit.py  witchbait.py
clownpeanuts/engine/: __init__.py  context.py  credentials.py  lateral.py  narrative.py  oops.py  rabbit_hole.py
clownpeanuts/intel/: __init__.py  behavior.py  biometrics.py  canary.py  classifier.py  collector.py  credentials.py  export.py  fingerprints.py  handoff.py  lure_bandit.py  map.py  mitre.py  reward.py  rotation.py  scoring.py  simulator.py  source.py  store.py
config/: clownpeanuts.yml  production-hardened.yml  production-reverse-proxy.yml
dashboard/: Dockerfile  next.config.mjs  package-lock.json  package.json
docs/: README.md  agent-handoff.md  architecture.md  current-state.md  public-extension-boundary.md  security-hardening-review.md  user-guide.md
scripts/: dev-down-demo.sh  dev-up-demo.sh
tests/: conftest.py
(+111 files in other folders)
